# cxpr

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  IR.plan.md  LICENSE  PERFORMANCE.plan.md  README.md  STRUCT.plan.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  ir_bench.c
cmake/: cxprConfig.cmake.in
examples/: README.md  physics.md  robotics.md  scoped_sources.c  scoped_sources.md  trading.md
include/cxpr/: ast.h  basket.h  context.h  cxpr.h  evaluator.h  expression.h  provider.h  registry.h  runtime_call.h  scope.h  source_plan.h  types.h  version.h
plans/: fix.md  simplify-tightened.md  simplify.md  typed-formula-engine.md
src/: ast.c  basket.c  context.c  core.h  eval.c  evaluator.c  expression.c  formula.c  hashmap.c  internal.h  ir.c  lexer.c  limits.h  parser.c  registry.c  struct.c  timeseries.c
src/ast/: analyze.c  construct.c  free.c  inspect.c  internal.h  printer.c  references.c
src/call/: args.c  args.h
src/context/: cache.c  internal.h  lifecycle.c  slot.c  state.h  structs.c  values.c
src/eval/: api.c  calls.c  helpers.c  internal.h  tree.c
src/eval/helpers/: base.c  cache.c  clone.c  constants.c  internal.h
src/expression/: evaluator.c  expression.c  internal.h
src/hashmap/: hashmap.c  internal.h
src/ir/: cache_key.c  compile.c  exec.c  internal.h  program.c  validate.c
src/ir/compile/: infer.c  internal.h  node.c  shared.c
src/ir/exec/: api.c  calls.c  fast.c  internal.h  lookup.c  typed.c
src/lexer/: internal.h  lexer.c
src/parser/: expression.c  grammar_expr.c  helpers.c  internal.h  parser.c  primary.c
src/provider/: provider.c  registry.c
src/registry/: add.c  call.c  defaults.c  define.c  helpers.c  internal.h
src/runtime/: call.c
src/scope/: source.c
src/source/: canonical.c  internal.h  plan.c
tests/: CMakeLists.txt  ast_analyze.test.c  ast_construct.test.c  ast_free.test.c  ast_func.test.c  ast_inspect.test.c  ast_printer.test.c  ast_references.test.c  basket.test.c  call_args.test.c  chain_access.test.c  context_cache.test.c  context_lifecycle.test.c  context_slot.test.c  context_structs.test.c  context_values.test.c  cxpr_test_internal.h  define.test.c  errors.test.c  eval.test.c  eval_api.test.c  eval_calls.test.c  eval_helpers.test.c  eval_tree.test.c  expression.test.c  expression_evaluator.test.c  expression_ir.test.c  field_value.test.c  formula.test.c  formula_ir.test.c  hashmap.test.c  ir.test.c  ir_cache_key.test.c  ir_compile.test.c  ir_exec_api.test.c  ir_exec_calls.test.c  ir_exec_fast.test.c  ir_exec_lookup.test.c  ir_exec_typed.test.c  ir_ownership.test.c  (+25 more)
tests/examples/: physics.test.c  robotics.test.c  trading.test.c
